[package]
name = "jot-pad"
version = "0.3.6"
edition = "2021"
authors = ["Pratyush Joshi"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
serde = { version = "1.0.151", features = ["derive"] }
rand = "0.8.5"
serde_json = "1.0.91"
